...
    }
}

private val SPACING = 8.dp
private val PANEL_PADDING = 16.dp
private val MOVE_LIST_SPACING = 2.dp
private const val BACK = "Back"

